--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
-<script async="async" data-cfasync="false" src="//pl27128466.profitableratecpm.com/079f55fa197d1ec0c462ef6e02926e33/invoke.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Saikot Love Test</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+    <h1>💖 Saikot Love Test 💖</h1>
+    <p>Enter your name and your partner's name to see your love result!</p>
+    <input type="text" id="yourName" placeholder="Your Name" />
+    <input type="text" id="partnerName" placeholder="Partner's Name" />
+    <button onclick="calculateLove()">Test Love</button>
+    <div id="result"></div>
+  </div>
+
+  <!-- ✅ Safe Adsterra Banner Ad (no adult content) -->
+  <script type='text/javascript' src='//pl23145668.toprevenuegate.com/f9/8b/f98b6b35e4b25bd964e94a450afed5f1.js'></script>
+
+  <script src="script.js"></script>
+</body>
+</html> async="async" data-cfasync="false" src="//pl27128466.profitableratecpm.com/079f55fa197d1ec0c462ef6e02926e33/invoke.js"></script>
 <div id="container-079f55fa197d1ec0c462ef6e02926e33"></div>
 <!DOCTYPE html>
 <html lang="en">
